// Copyright (c) 2021 Contributors to the Eclipse Foundation
//
// See the NOTICE file(s) distributed with this work for additional
// information regarding copyright ownership.
//
// This program and the accompanying materials are made available under the
// terms of the Eclipse Public License 2.0 which is available at
// http://www.eclipse.org/legal/epl-2.0
//
// SPDX-License-Identifier: EPL-2.0

syntax = "proto3";

package github.com.eclipse_kanto.container_management.containerm.api.types.containers;

option go_package = "github.com/eclipse-kanto/container-management/containerm/api/types/containers;containers";

// Represents the container's process configuration
message ContainerConfiguration {

    // Provides the environmental configuration of the container's process - i.e. environmental variables
    repeated string env = 1;
    // Provides the command to be run upon container start
    repeated string cmd = 2;
}