// Copyright (c) 2022 Contributors to the Eclipse Foundation
//
// See the NOTICE file(s) distributed with this work for additional
// information regarding copyright ownership.
//
// This program and the accompanying materials are made available under the
// terms of the Eclipse Public License 2.0 which is available at
// http://www.eclipse.org/legal/epl-2.0
//
// SPDX-License-Identifier: EPL-2.0

syntax = "proto3";

package github.com.eclipse_kanto.container_management.containerm.api.types.containers;

option go_package = "github.com/eclipse-kanto/container-management/containerm/api/types/containers;containers";

// Represents container image's decryption configuration
message DecryptConfig {

    // Private key filepath with an optional password separated by a colon
    repeated string keys = 1;

    // Recipient protocol(pkcs7) and filepath to a x509 certificate separated by a colon
    repeated string recipients = 2;

}